# anneschuth.github.io

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  CNAME  Gemfile  README.md  _config.yml  about.markdown  activities.markdown  analyze_naming.py  analyze_presentations.py  bibtex-to-publications.py  check_links.py  check_yaml.py  collect.py  cv.markdown  defense.markdown  fetch_scholar_data.py  fix_all_naming.py  fix_assets.py  fix_broken_links.py  fix_filenames.py  fix_shields.py  generate_cv_pdf.py  generate_summaries.py  in-the-press.markdown  index.html  justfile  press.markdown  publications.html  publications.markdown  pyproject.toml  refs.bib  requirements-cv.txt  requirements-dev.txt  search.json  software.markdown  talks.markdown  teaching.markdown  (+2 more)
_data/: languages.yml  scholar_stats.yml
_includes/: analytics.html  footer.html  google-analytics.html  head.html  header.html  hreflang.html  language-switcher.html  social.html
_layouts/: default.html  post.html  publication.html  student.html  talk.html
_plugins/: scholar_stats.rb
_posts/: 2012-07-19-taia12-workshop-paper-accepted.md  2012-08-27-bart-de-goede-defended-his-master-thesis.md  2012-11-08-wsdm13-paper-accepted.md  2012-11-20-ecir2014.md  2013-07-14-cikm13-paper-accepted.md  2013-09-05-lerot.md  2013-12-03-ecir14-full-paper-accepted.md  2013-12-03-ecir14-short-paper-accepted.md  2014-01-04-grotere-universiteit-is-daarom-nog-niet-beter.md  2014-02-19-research-in-moscow.md  2014-05-11-sigir-short-paper-accepted.md  2014-08-09-cikm14-full-paper-accepted.md  2023-05-23-tot.md  (+48 more)
(+220 files in other folders)
